# mystery-gang-orchestrator

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
data/: characters.json  sample_run.json
demo/: group_chat_demo.py
docs/: future-animation-plans.md  project-evaluation.md
src/: assembly.py  character.py  event_renderer.py  event_schema.py  technobabble.py
tests/: test_assembly.py  test_character.py  test_technobabble.py
